// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`generating messages for BitBucket server summary result matches snapshot, with a commit 1`] = `
"
⚠️  Danger found some issues. Don't worry, everything is fixable.


| ❌ | Fails
| --- | --- |

> Failing message Failing message


| ⚠️ | Warnings
| --- | --- |

> Warning message Warning message


| ✨ | Messages
| --- | --- |

> message


markdown


|    |
|---:|
| _Generated by ὪB [dangerJS](https://danger.systems/js) against e70f3d6468f61a4bef68c9e6eaba9166b096e23c_ |


[](http://danger-id-blankID;)
"
`;

exports[`generating messages for BitBucket server summary result matches snapshot, without a commit 1`] = `
"
⚠️  Danger found some issues. Don't worry, everything is fixable.


| ❌ | Fails
| --- | --- |

> Failing message Failing message


| ⚠️ | Warnings
| --- | --- |

> Warning message Warning message


| ✨ | Messages
| --- | --- |

> message


markdown


|    |
|---:|
| _Generated by ὪB [dangerJS](https://danger.systems/js)_ |


[](http://danger-id-blankID;)
"
`;
